[migration 3] Spring Boot 3.5.16, jakarta, JDK 21; security down to anonymous
Second and main commit of Phase 3 (the first, 1dd9546b, moved the wrapper to
Gradle 8.14.5, PMD to 7.26.0 and cleared the Phase 2 carry-overs).

Build and platform
- Spring Boot 2.7.18 -> 3.5.16 (Spring 6.2.19, Spring Security 6.5.11,
  Tomcat 10.1.55); server/catgenome compiles and runs on a JDK 21 toolchain,
  server/ngb-cli stays on 17.
- javax -> jakarta, scoped to javax.servlet and javax.xml.bind only.
  javax.xml.xpath/parsers/datatype/stream/namespace, javax.net.ssl and
  javax.naming are still JDK packages and were left alone. PathwayManager
  deliberately stays on javax JAXB: libsbgn, sbgn-converter and
  biojava-structure are compiled against it, so the javax 2.3.1 API and
  jaxb-impl 2.3.9 remain on the classpath next to jakarta 4.0.
- AWS SDK 1.11.704 -> 1.12.797. 1.11.x calls
  PropertyNamingStrategy.PASCAL_CASE_TO_CAMEL_CASE, which Jackson 2.12
  removed, so the context failed to refresh before this.
- springdoc-openapi 2.8.17 replaces swagger-springmvc: /v3/api-docs and
  /swagger-ui/index.html.
- D11: EhCache 2 -> Caffeine. That drops all four --add-opens from the test
  JVM args and from .devenv/ngb/entrypoint.sh; JAVA_EXTRA_OPTS is now empty.
- Tests run on useJUnitPlatform() with the vintage engine (D13: the 129
  JUnit 4 classes are not converted).
- .devenv defaults NGB_JAVA_VERSION to 21, since the jar is Java 21 bytecode.

Security is anonymous for the duration of Phase 3
The OpenSAML 2 stack (spring-security-saml2-core) cannot work with Spring
Security 6 and has no jakarta build, so it is out of the build. AUTH_MODE=saml
is refused by the entrypoint; only AUTH_MODE=none starts. Phase 4 rewrites
SAMLSecurityConfiguration on Spring Security's own SAML2 support and recovers
the deleted classes from git -- they are the specification for the attribute
mapping and the JWT claims.

Test classes removed to get there. Phase 4 must restore exactly this set:
- src/test/java/co